home page mobile responsive - word wrap bug

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -87,6 +87,9 @@ h2 {
   }
 
   .home-page {
+    .h1 {
+      overflow-wrap: normal;
+    }
     .text-zone {
       position: initial;
       width: 100%;
